v1.2 Cleaning & Bump
- Fix lots of code smells
- Bump version to 1.2